# ur_elpis_setup

./: README.md
setup_environment/: CMakeLists.txt  package.xml
setup_environment/config/: environment_config.yaml
setup_environment/src/: setup_environment_node.cpp
ur_elpis_control/: CMakeLists.txt  package.xml
ur_elpis_control/config/: my_robot_calibration.yaml  ros2_controllers.yaml
ur_elpis_control/launch/: start_robot.launch.py
ur_elpis_control/resource/: ur_elpis_control
ur_elpis_control/rviz/: view_robot.rviz
ur_elpis_control/urdf/: my_robot_cell_controlled.urdf.xacro
ur_elpis_description/: CMakeLists.txt  package.xml
ur_elpis_description/assets/lab_scene/: lab_scene.mtl  lab_scene_vhacd.stl
ur_elpis_description/assets/realsense2/visual/: d435.mtl
ur_elpis_description/assets/ur10/visual/: base.mtl  forearm.mtl  shoulder.mtl  upperarm.mtl  wrist1.mtl  wrist2.mtl  wrist3.mtl
ur_elpis_description/launch/: view_robot.launch.py
ur_elpis_description/resource/: ur_elpis_description
ur_elpis_description/rviz/: urdf.rviz
ur_elpis_description/urdf/: my_robot_cell.urdf.xacro  my_robot_cell_macro.xacro
ur_elpis_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur_elpis_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  my_robot_cell.srdf  ompl_planning.yaml  sensors_3d.yaml
ur_elpis_moveit_config/launch/: complete_system.launch.py  move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py
