<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>setup_environment</name>
  <version>0.0.1</version>
  <description>Package for setting up static environment elements (table, ceiling) in MoveIt planning scene</description>
  <maintainer email="inkredible2599@gmail.com">Niranjan Kumar Ilampooranan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>geometric_shapes</depend>
  <depend>geometry_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

