<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_elpis_control</name>
  <version>1.0.0</version>
  <description>ros2_control setup for UR10 robot with Robotis gripper in ELPIS lab @ WPI</description>
  <maintainer email="inkredible2599@gmail.com">Niranjan Kumar Ilampooranan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ur_elpis_description</exec_depend>
  <exec_depend>ur_controllers</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur_client_library</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

